# advent-of-code-2022

./: .gitattributes  Cargo.toml
assets/shaders/: compute.wgsl  day1.wgsl
examples/compute/: main.rs
examples/day1/: basic.rs  main.rs
examples/day2/: main.rs
examples/day3/: main.rs
examples/day4/: main.rs
examples/day5/: main.rs
examples/day6/: main.rs
examples/day7/: main.rs
examples/day8/: main.rs
examples/day9/: main.rs
src/: args.rs
