[package]
name = "advent_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "advent"
path = "src/lib.rs"

[dependencies]
structopt = { version = "0.3", default-features = false }
anyhow = "1.0"
bevy = { version = "0.9", features = ["dynamic"]}
itertools = "0.10"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
